Changing the name of a keying set does not change group name #33043

Closed
opened 2012-11-01 15:53:00 +01:00 by Tobias Oelgarte · 5 comments

%%%If i have some kind of rig, define a keying set, insert some keys with it and change the name of the keying set later on, then the name of the keying set inside the Graph-Editor/Dopesheet, etc. does not change with it. It stays the same. If i remind correctly it was done for bones not so long ago, so that bones (bonegroups) would have the same name in both parts.%%%

%%%If i have some kind of rig, define a keying set, insert some keys with it and change the name of the keying set later on, then the name of the keying set inside the Graph-Editor/Dopesheet, etc. does not change with it. It stays the same. If i remind correctly it was done for bones not so long ago, so that bones (bonegroups) would have the same name in both parts.%%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%I checked the code - and as I understand now it works as follows:

  • on inserting keys, it tries to find a name for the keys. If none available, it uses the name of keyingset.
  • it does that on each insertion. Adding new 'groups' in the Actions if there's new named channels, but never overwriting the existing names.

I can see the use of it... but a rename action could check all existing channels to handle new keying set names yes. Since this is separated data - not a simple case probably.

Maybe Joshua can shine some light on it :) It at least could be marked on our todo then.%%%

%%%I checked the code - and as I understand now it works as follows: - on inserting keys, it tries to find a name for the keys. If none available, it uses the name of keyingset. - it does that on each insertion. Adding new 'groups' in the Actions if there's new named channels, but never overwriting the existing names. I can see the use of it... but a rename action could check all existing channels to handle new keying set names yes. Since this is separated data - not a simple case probably. Maybe Joshua can shine some light on it :) It at least could be marked on our todo then.%%%
Member

%%%Should be easy to fix for "absolute" keyingsets which is the only case where these names can be changed. However, for builtin keyingsets, the problem is much harder; but in that case, users can't rename those themselves ;)

On my todo for today...%%%

%%%Should be easy to fix for "absolute" keyingsets which is the only case where these names can be changed. However, for builtin keyingsets, the problem is much harder; but in that case, users can't rename those themselves ;) On my todo for today...%%%
Member

%%%Fixed in svn.%%%

%%%Fixed in svn.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33043
No description provided.