Bugfix [#33043] Changing the name of a keying set does not change group name

This now works for absolute Keying Sets (Builtin Keying Sets are highly context
dependent, and usually cannot be renamed, so this shouldn't be a problem there)